<resources>
    <string name="app_name">Where R U</string>

    <!--校园活动状态选择下拉列表-->
    <string-array name="campus_activity_state">
        <item>全部</item>
        <item>正在进行</item>
        <item>即将开始</item>
        <item>已结束</item>
    </string-array>

    <string name="title_activity_campus_activity_details">
        CampusActivityDetailsActivity</string>
    <string name="title_activity_campus_competition_details">
        CampusCompetitionDetailsActivity</string>
    <string name="title_activity_campus_team_details">
        CampusTeamDetailsActivity</string>

    <!-- 学号验证界面字符串资源 -->
    <string name="student_id_verification">学号验证</string>
    <string name="student_id">学号</string>
    <string name="educational_administration_system_password">教务系统密码</string>
    <string name="attention">注：平台不保存用户教务密码，本\n次用于验证用户真实性</string>
    <string name="verification">验证</string>

</resources>
